--- a/static/index.html
+++ b/static/index.html
@@ -5,60 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Streaming</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Music Streaming</h1>
-    <form id="upload-form" enctype="multipart/form-data">
-        <input type="text" name="title" placeholder="Title" required>
-        <input type="text" name="artist" placeholder="Artist" required>
-        <input type="file" name="file" required>
-        <button type="submit">Upload</button>
-    </form>
+    <header>
+        <h1>Music Streaming</h1>
+    </header>
 
-    <div id="music-list"></div>
+    <main>
+        <section id="upload-section">
+            <form id="upload-form" enctype="multipart/form-data">
+                <input type="text" name="title" placeholder="Title" required>
+                <input type="text" name="artist" placeholder="Artist" required>
+                <input type="file" name="file" required>
+                <button type="submit">Upload</button>
+            </form>
+        </section>
 
-    <audio id="audio-player" controls></audio>
+        <section id="music-section">
+            <h2>Your Music</h2>
+            <div id="music-list"></div>
+        </section>
 
-    <script>
-        document.getElementById('upload-form').addEventListener('submit', async function (event) {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            const response = await fetch('/api/music', {
-                method: 'POST',
-                body: formData,
-            });
-            const result = await response.json();
-            if (response.ok) {
-                alert('Music uploaded successfully!');
-                loadMusicList();
-            } else {
-                alert('Failed to upload music: ' + result.error);
-            }
-        });
+        <footer>
+            <audio id="audio-player" controls></audio>
+        </footer>
+    </main>
 
-        async function loadMusicList() {
-            const response = await fetch('/api/music');
-            const musics = await response.json();
-            const musicList = document.getElementById('music-list');
-            musicList.innerHTML = '';
-            musics.forEach(music => {
-                const div = document.createElement('div');
-                const link = document.createElement('a');
-                link.href = '#';
-                link.textContent = `${music.title} by ${music.artist}`;
-                link.onclick = () => {
-                    const audioPlayer = document.getElementById('audio-player');
-                    audioPlayer.src = `/api/stream/${music.id}`;
-                    audioPlayer.play();
-                };
-                div.appendChild(link);
-                musicList.appendChild(div);
-            });
-        }
-
-        loadMusicList();
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
