not a spotify knock off

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,9 @@
         </section>
 
         <footer>
-            <audio id="audio-player" controls></audio>
+            <div id="audio-player-container">
+                <audio id="audio-player" controls></audio>
+            </div>
         </footer>
     </main>
 
