--- a/static/index.html
+++ b/static/index.html
@@ -9,31 +9,44 @@
 </head>
 
 <body>
-    <header>
-        <h1>Music Streaming</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Music Streaming</h1>
+        </header>
+        <main>
+            <section id="upload-section">
+                <h2>Upload Music</h2>
+                <form id="upload-form" enctype="multipart/form-data">
+                    <input type="text" name="title" placeholder="Title" required>
+                    <input type="text" name="artist" placeholder="Artist" required>
+                    <input type="file" name="file" required>
+                    <button type="submit">Upload</button>
+                </form>
+            </section>
 
-    <main>
-        <section id="upload-section">
-            <form id="upload-form" enctype="multipart/form-data">
-                <input type="text" name="title" placeholder="Title" required>
-                <input type="text" name="artist" placeholder="Artist" required>
-                <input type="file" name="file" required>
-                <button type="submit">Upload</button>
-            </form>
-        </section>
-
-        <section id="music-section">
-            <h2>Your Music</h2>
-            <div id="music-list"></div>
-        </section>
+            <section id="music-list-section">
+                <h2>Music List</h2>
+                <div id="music-list"></div>
+            </section>
+        </main>
 
         <footer>
-            <div id="audio-player-container">
-                <audio id="audio-player" controls></audio>
+            <div id="now-playing">
+                <img id="cover-art" src="" alt="Cover Art" />
+                <div id="track-info">
+                    <h3 id="track-title">No song selected</h3>
+                    <p id="track-artist"></p>
+                </div>
+                <div id="audio-controls">
+                    <button id="play-pause">Play</button>
+                    <input type="range" id="seek-slider" value="0" max="100" />
+                    <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+                </div>
             </div>
+
+            <audio id="audio-player"></audio>
         </footer>
-    </main>
+    </div>
 
     <script src="script.js"></script>
 </body>
