not a spotify knock off

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
                     <input type="file" name="file" required>
                     <button type="submit">Upload</button>
                 </form>
+                <div id="upload-progress" class="loader hidden"></div>
             </section>
 
             <section id="music-list-section">
