not a spotify knock off

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,9 @@
             </section>
         </main>
 
-        <img id="cover-art" src="" alt="Cover Art" />
+        <div id="cover-art-container">
+            <img id="cover-art" src="" alt="Cover Art" />
+        </div>
         <footer>
             <div class="slidecontainer">
                 <input type="range" min="0" max="1000" value="0" class="slider" id="seek-slider">
