not a spotify knock off

--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,9 @@
                 </div>
                 <div id="audio-controls">
                     <button id="play-pause">Play</button>
+
+                </div>
+                <div class="playtime">
                     <span id="current-time">0:00</span> / <span id="duration">0:00</span>
                 </div>
             </div>
