--- a/static/index.html
+++ b/static/index.html
@@ -29,10 +29,10 @@
             </section>
         </main>
 
-        <div id="cover-art-container">
-            <img id="cover-art" src="" alt="Cover Art" />
-        </div>
-        <footer>
+        <footer id="now-playing-container">
+            <div id="cover-art-container">
+                <img id="cover-art" src="" alt="Cover Art" />
+            </div>
             <div class="slidecontainer">
                 <input type="range" min="0" max="1000" value="0" class="slider" id="seek-slider">
             </div>
