--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
             <section id="upload-section">
                 <h2>Upload Music</h2>
                 <form id="upload-form" enctype="multipart/form-data">
-                    <input type="file" name="file" required>
+                    <input type="file" name="files" multiple required>
                     <button type="submit">Upload</button>
                 </form>
                 <div id="upload-progress" class="loader hidden"></div>
