--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
             </section>
         </main>
 
-        <footer id="now-playing-container">
+        <footer id="now-playing-container" class="hidden">
             <div id="cover-art-container">
                 <img id="cover-art" src="" alt="Cover Art" />
             </div>
