--- a/static/index.html
+++ b/static/index.html
@@ -38,77 +38,39 @@
         <header>
             <h1>Music Streaming</h1>
         </header>
-        <main>
-            <section id="upload-section">
-                <h2>Upload Music</h2>
-                <form id="upload-form" enctype="multipart/form-data">
-                    <input type="file" name="files" multiple required>
+        <div class="content">
+            <aside id="sidebar">
+                <h2>My Library</h2>
+                <button id="new-playlist-btn">+ New Playlist</button>
+                <div id="playlists-section">
+                    <h3>Playlists</h3>
+                    <ul id="playlists-list"></ul>
+                </div>
+                <div id="albums-section">
+                    <h3>Albums</h3>
+                    <ul id="albums-list"></ul>
+                </div>
+            </aside>
+            <main>
+                <section id="upload-section">
+                    <h2>Upload Music</h2>
+                    <form id="upload-form" enctype="multipart/form-data">
+                        <input type="file" name="files" multiple required>
+                        <button type="submit" name="upload">Upload</button>
+                        <label for="files" id="file-progress"></label>
+                    </form>
+                    <div id="upload-progress" class="loader hidden"></div>
+                </section>
 
-                    <button type="submit" name="upload">Upload</button>
-                    <label for="files" id="file-progress"></label>
-                </form>
-                <div id="upload-progress" class="loader hidden"></div>
-            </section>
-
-            <section id="music-list-section">
-                <h2>Music List</h2>
-                <div id="music-list"></div>
-            </section>
-        </main>
+                <section id="music-list-section">
+                    <h2>Music List</h2>
+                    <div id="music-list"></div>
+                </section>
+            </main>
+        </div>
 
         <footer id="now-playing-container" class="not-playing">
-            <div id="cover-art-container">
-                <img id="cover-art" src="" alt="Cover Art" />
-            </div>
-            <div class="slidecontainer">
-                <input type="range" min="0" max="1000" value="0" class="slider" id="seek-slider">
-            </div>
-            <div id="now-playing">
-
-                <div id="track-info">
-                    <h3 id="track-title">No song selected</h3>
-                    <p id="track-artist"></p>
-                </div>
-                <div id="audio-controls">
-                    <button id="repeat-button" class="control-button">
-                        <svg>
-                            <use href="#repeat"></use>
-                        </svg>
-                    </button>
-
-                    <button id="prev-button">
-                        <svg>
-                            <use href="#prev"></use>
-                        </svg>
-                    </button>
-                    <button id="play-pause">
-                        <svg id="play-icon" style="display: none;">
-                            <use href="#play"></use>
-                        </svg>
-                        <svg id="pause-icon">
-                            <use href="#pause"></use>
-                        </svg>
-                    </button>
-                    <button id="next-button">
-                        <svg>
-                            <use href="#next"></use>
-                        </svg>
-                    </button>
-                    <button id="shuffle-button" class="control-button">
-                        <svg>
-                            <use href="#shuffle"></use>
-                        </svg>
-                    </button>
-                </div>
-                <div class="volume">
-                    <input type="range" min="0" max="100" value="100" class="slider" id="volume-slider">
-                </div>
-                <div class="playtime">
-                    <span id="current-time">2:42</span> / <span id="duration">4:20</span>
-                </div>
-            </div>
-
-            <audio id="audio-player"></audio>
+            <!-- Footer remains unchanged -->
         </footer>
     </div>
 
