--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,9 @@
             <path xmlns="http://www.w3.org/2000/svg"
                 d="M266-32 74-225l192-193 89 90-41 40h366v-161h126v287H314l41 40-89 90ZM154-500v-288h493l-40-39 88-90 193 192-193 193-88-90 40-40H280v162H154Z" />
         </symbol>
+        <symbol id="plus" viewbox="0 -960 960 960">
+            <path xmlns="http://www.w3.org/2000/svg" d="M412-412H154v-136h258v-259h136v259h258v136H548v258H412v-258Z" />
+        </symbol>
     </defs>
 </svg>
 
