--- a/static/index.html
+++ b/static/index.html
@@ -72,6 +72,16 @@
             </main>
         </div>
 
+        <div id="playlist-menu" class="hidden">
+            <h3>Select Playlist</h3>
+            <div id="existing-playlists"></div>
+            <h3>Create New Playlist</h3>
+            <form id="create-playlist-form">
+                <input type="text" name="playlist-name" placeholder="Playlist Name" required>
+                <button type="submit">Create</button>
+            </form>
+        </div>
+
         <footer id="now-playing-container" class="not-playing">
             <div id="cover-art-container">
                 <img id="cover-art" src="" alt="Cover Art" />
