--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
 
                 <section id="music-list-section">
                     <h2>Music List</h2>
-                    <div id="music-list"></div>
+                    <div id="music-list" class="music-list"></div>
                 </section>
             </main>
         </div>
