--- a/static/index.html
+++ b/static/index.html
@@ -129,10 +129,10 @@
                         </svg>
                     </button>
                     <button id="play-pause">
-                        <svg id="play-icon" style="display: none;">
+                        <svg id="play-icon">
                             <use href="#play"></use>
                         </svg>
-                        <svg id="pause-icon">
+                        <svg id="pause-icon" style="display: none;">
                             <use href="#pause"></use>
                         </svg>
                     </button>
