--- a/static/index.html
+++ b/static/index.html
@@ -107,6 +107,11 @@
             <div id="cover-art-container">
                 <img id="cover-art" src="" alt="Cover Art" />
             </div>
+            <div id="data-scroll-container">
+                <div id="data-scroll">
+                    2013|Album|Lossless|FLAC|
+                </div>
+            </div>
             <div class="slidecontainer">
                 <input type="range" min="0" max="1000" value="0" class="slider" id="seek-slider">
             </div>
