--- a/static/index.html
+++ b/static/index.html
@@ -109,7 +109,8 @@
             </div>
             <div id="data-scroll-container">
                 <div id="data-scroll">
-                    2013|Album|Lossless|FLAC|
+                    2013 Album Lossless FLAC 16-Bit 44.1kHz 2013 Album Lossless FLAC 16-Bit 44.1kHz 2013 Album Lossless
+                    FLAC 16-Bit 44.1kHz
                 </div>
             </div>
             <div class="slidecontainer">
