--- a/static/index.html
+++ b/static/index.html
@@ -109,8 +109,8 @@
             </div>
             <div id="data-scroll-container">
                 <div id="data-scroll">
-                    2013 Album Lossless FLAC 16-Bit 44.1kHz 2013 Album Lossless FLAC 16-Bit 44.1kHz 2013 Album Lossless
-                    FLAC 16-Bit 44.1kHz
+                    <span>2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
+                    <span>2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
