--- a/static/index.html
+++ b/static/index.html
@@ -109,8 +109,8 @@
             </div>
             <div id="data-scroll-container">
                 <div id="data-scroll">
-                    <span id="1">2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
-                    <span id="2">2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
+                    <span id="num1">2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
+                    <span id="num2">2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
