--- a/static/index.html
+++ b/static/index.html
@@ -110,7 +110,7 @@
             <div id="data-scroll-container">
                 <div id="data-scroll">
                     <span>2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
-                    <span>2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
+                    <span id="num2">2013 Album Lossless FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
