--- a/static/index.html
+++ b/static/index.html
@@ -108,9 +108,9 @@
                 <img id="cover-art" src="" alt="Cover Art" />
             </div>
             <div id="data-scroll-container">
-                <div id="data-scroll" class="paused">
-                    <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
-                    <span id="num2">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
+                <div id="data-scroll">
+                    <span> 2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
+                    <span id="num2"> 2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
