--- a/static/index.html
+++ b/static/index.html
@@ -111,7 +111,7 @@
                 <div id="data-scroll">
                     <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                     <span class="spacer"></span>
-                    <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
+                    <span id="num2">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
