--- a/static/index.html
+++ b/static/index.html
@@ -103,7 +103,7 @@
             </form>
         </div>
 
-        <footer id="now-playing-container" class="not-playing">
+        <footer id="now-playing-container">
             <div id="cover-art-container">
                 <img id="cover-art" src="" alt="Cover Art" />
             </div>
