--- a/static/index.html
+++ b/static/index.html
@@ -104,10 +104,10 @@
         </div>
 
         <footer id="now-playing-container">
-            <div id="cover-art-container">
+            <div id="cover-art-container" class="hidden">
                 <img id="cover-art" src="" alt="Cover Art" />
             </div>
-            <div id="data-scroll-container">
+            <div id="data-scroll-container" class="hidden">
                 <div id="data-scroll">
                     <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                     <span id="num2">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
