--- a/static/index.html
+++ b/static/index.html
@@ -112,6 +112,7 @@
                     <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                     <span id="num2">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                     <span id="num3">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
+                    <span id="num4">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                 </div>
             </div>
             <div class="slidecontainer">
