--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Streaming</title>
     <link rel="stylesheet" href="styles.css">
+    <script src='https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1'></script>
 </head>
 
 <svg style="display: none">
@@ -154,6 +155,8 @@
                             <use href="#shuffle"></use>
                         </svg>
                     </button>
+                    <button is='google-cast-button'></button>
+
                 </div>
                 <div class="volume">
                     <input type="range" min="0" max="100" value="100" class="slider" id="volume-slider">
