--- a/static/login.html
+++ b/static/login.html
@@ -31,9 +31,12 @@
                     body: JSON.stringify({ username, password })
                 });
                 const result = await response.json();
+
+                console.log(result);
+
                 if (response.ok) {
                     document.cookie = `token=${result.token}; Path=/;`
-                    window.location.href = '/';
+                    // window.location.href = '/';
                 } else {
                     document.getElementById('login-error').classList.remove('hidden');
                 }
