--- a/static/login.html
+++ b/static/login.html
@@ -36,7 +36,7 @@
 
                 if (response.ok) {
                     document.cookie = `token=${result.token}; Path=/;`
-                    // window.location.href = '/';
+                    window.location.href = '/';
                 } else {
                     document.getElementById('login-error').classList.remove('hidden');
                 }
