--- a/static/login.html
+++ b/static/login.html
@@ -34,8 +34,8 @@
 
                 console.log(result);
 
-                if (response.ok) {
-                    document.cookie = `token=${result.token}; Path=/;`
+                if (response.ok && result.token) {
+                    document.cookie = `token=${result.token}; Path=/; SameSite=Strict`;
                     window.location.href = '/';
                 } else {
                     document.getElementById('login-error').classList.remove('hidden');
