--- a/static/index.html
+++ b/static/index.html
@@ -147,6 +147,11 @@
                 <section id="music-list-section">
                     <h2 id="music-list-title">Music List</h2>
                     <div id="music-list" class="music-list"></div>
+                    <h2 id="playlist-title">Playlist</h2>
+                    <div id="playlist" class="playlist-cards"></div>
+                    <h2 id="albums-title">Albums</h2>
+                    <div id="albums" class="playlist-cards"></div>
+
                 </section>
             </main>
         </div>
