--- a/static/index.html
+++ b/static/index.html
@@ -150,7 +150,7 @@
                     <h2 id="playlist-title">Playlist</h2>
                     <div id="playlist-list" class="playlist-cards"></div>
                     <h2 id="albums-title">Albums</h2>
-                    <div id="playlist-list" class="playlist-cards"></div>
+                    <div id="albums-list" class="playlist-cards"></div>
 
                 </section>
             </main>
